[package]
name = "maja-splitcap"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Split capture files into per-flow pcap outputs."
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
indicatif = { workspace = true }
indicatif-log-bridge = { workspace = true }
log = { workspace = true }
maja = { workspace = true }
